# pkg/apis/v1alpha1/api/oas_router_gen.go
@@ -305,6 +305,10 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 						if len(elem) == 0 {
 							// Leaf node.
 							switch r.Method {
+							case "DELETE":
+								s.handleDeleteApplicationSecretRequest([1]string{
+									args[0],
+								}, elemIsEscaped, w, r)
 							case "GET":
 								s.handleGetApplicationSecretRequest([1]string{
 									args[0],
@@ -318,7 +322,7 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 									args[0],
 								}, elemIsEscaped, w, r)
 							default:
-								s.notAllowed(w, r, "GET,POST,PUT")
+								s.notAllowed(w, r, "DELETE,GET,POST,PUT")
 							}
 
 							return
@@ -722,6 +726,15 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						if len(elem) == 0 {
 							// Leaf node.
 							switch method {
+							case "DELETE":
+								r.name = DeleteApplicationSecretOperation
+								r.summary = "Delete Application Secret"
+								r.operationID = "DeleteApplicationSecret"
+								r.operationGroup = ""
+								r.pathPattern = "/v1alpha1/applications/{name}/secret"
+								r.args = args
+								r.count = 1
+								return r, true
 							case "GET":
 								r.name = GetApplicationSecretOperation
 								r.summary = "Get Application Secret"
